remove extra app bar and fabs

--- a/app/src/main/res/layout/term_list_item.xml
+++ b/app/src/main/res/layout/term_list_item.xml
@@ -2,6 +2,7 @@
 <!-- Layout for a single list item in the list of pets -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -26,4 +27,5 @@
         tools:text="Short description of Term 1"
         android:textAppearance="?android:textAppearanceSmall"
         android:textColor="#AEB6BD"  />
+
 </LinearLayout>
