--- a/app/src/main/res/layout/activity_edit_set.xml
+++ b/app/src/main/res/layout/activity_edit_set.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_margin"
     tools:context=".EditSetActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <!-- Basic Set Information category -->
+    <TextView
+        android:text="@string/set_name"
+        style="@style/EditTitleStyle" />
+
+    <TextView
+        android:text="@string/set_desc"
+        style="@style/EditTitleStyle" />
+
+
+
+
+</LinearLayout>
