--- a/app/src/main/res/layout/activity_edit_set.xml
+++ b/app/src/main/res/layout/activity_edit_set.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,15 +9,50 @@
     tools:context=".EditSetActivity">
 
     <!-- Basic Set Information category -->
-    <TextView
-        android:text="@string/set_name"
-        style="@style/EditTitleStyle" />
-
-    <TextView
-        android:text="@string/set_desc"
-        style="@style/EditTitleStyle" />
 
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-16dp"
+        android:layout_marginLeft="-4dp"
+        android:layout_marginStart="-4dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="25">
 
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/name_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top|start"
+            android:hint="@string/set_name"
+            android:inputType="text"
+            android:maxLength="25"
+            android:maxLines="1" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-16dp"
+        android:layout_marginLeft="-4dp"
+        android:layout_marginStart="-4dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="500">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/desc_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top|start"
+            android:hint="@string/set_desc"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+            android:maxLength="50"
+            android:maxLines="3" />
+
+    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
