--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,10 +20,10 @@
 
 
     <!-- Style for an EditText field in the editor -->
-    <style name="EditTitleStyle">
+    <style name="EditLabelStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
         <item name="android:textColor">@color/colorAccent</item>
 
