--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditCardActivity">
+    android:orientation="vertical"
+    android:padding="@dimen/activity_margin"
+    tools:context=".EditSetActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <!-- Basic Set Information category -->
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-16dp"
+        android:layout_marginLeft="-4dp"
+        android:layout_marginStart="-4dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="25">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/name_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top|start"
+            android:hint="@string/card_term"
+            android:inputType="text"
+            android:maxLength="25"
+            android:maxLines="1" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-16dp"
+        android:layout_marginLeft="-4dp"
+        android:layout_marginStart="-4dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="150">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/desc_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top|start"
+            android:hint="@string/card_definition"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+            android:maxLength="150"
+            android:maxLines="3" />
+
+    </android.support.design.widget.TextInputLayout>
+
+</LinearLayout>
