--- a/app/src/main/res/menu/menu_card_editor.xml
+++ b/app/src/main/res/menu/menu_card_editor.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_save_card"
         android:title="@string/action_save"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/ic_check_white_24dp"
         app:showAsAction="always" />
 
     <item
