--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.jasminelawrence.customflashcards.MainActivity">
 
-        <ListView
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test set"
+        android:onClick="showTerm"/>
+
+    <ListView
             android:id="@+id/set_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         </ListView>
+
 
         <!-- Empty view for the list -->
         <RelativeLayout
