--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Test set"
-        android:onClick="showTerm"/>
+        android:onClick="showTermList"/>
 
     <ListView
             android:id="@+id/set_list"
