--- a/app/src/main/res/layout/content_card_list.xml
+++ b/app/src/main/res/layout/content_card_list.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Test set"
-        android:onClick="showTerm"/>
+        android:onClick="showTermList"/>
 
     <ListView
         android:id="@+id/set_list"
@@ -61,7 +61,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_add_set"
+        android:id="@+id/fab_add_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
