update set placeholder name and edit set menu label

--- a/app/src/main/res/menu/menu_card_list.xml
+++ b/app/src/main/res/menu/menu_card_list.xml
@@ -14,6 +14,6 @@
 
     <item
         android:id="@+id/action_edit_set"
-        android:title="@string/action_delete"
+        android:title="@string/edit_set"
         app:showAsAction="never" />
 </menu>
